<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="mobileViewModel"
            type="net.tospay.auth.ui.account.verify.MobileMoneyViewModel" />

    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.verify.VerifyMobileFragment">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_validate_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:text="@string/enter_verification_code"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/email_verification_message" />

                <TextView
                    android:id="@+id/phoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_semibold"
                    android:text="@{mobileViewModel.phone}"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    tools:text="+254712345678" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/codeEditText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:gravity="center"
                    android:hint="Enter code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textAllCaps="true"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_verify_phone"
                    style="@style/Tospay.Button.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginRight="28dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{(view)->mobileViewModel.onClick(view)}"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/resend_message" />

                    <Button
                        android:id="@+id/btn_resend"
                        style="@style/Tospay.Button.Transparent.Border"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:onClick="@{(view)->mobileViewModel.onClick(view)}"
                        android:text="@string/resend"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>


    </FrameLayout>

</layout>