<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="phoneViewModel"
            type="net.tospay.auth.ui.auth.phone.PhoneViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.auth.phone.PhoneVerificationFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_space_24"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_space_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/enter_verification_code"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:gravity="center_horizontal"
                android:text="@string/email_verification_message" />

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_semibold"
                android:text="@{phoneViewModel.user.phone}"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:text="+254712345678" />

            <net.tospay.auth.view.ErrorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space_10"
                android:visibility="@{phoneViewModel.isError ? View.VISIBLE : View.GONE}"
                app:error_message="@{phoneViewModel.errorMessage}" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/codeInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_space_24"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="@dimen/default_space_24"
                android:layout_marginEnd="@dimen/default_space_24"
                android:layout_marginRight="28dp"
                android:hint="@string/enter_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/codeEditText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="6"
                    android:text="@{phoneViewModel.otp}"
                    android:textAllCaps="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_verify_phone"
                style="@style/Tospay.Button.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{(view)->phoneViewModel.onClick(view)}"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space_16"
                android:fontFamily="@font/proxima_nova_regular"
                android:gravity="center_horizontal"
                android:text="@string/resend_message" />

            <Button
                android:id="@+id/btn_resend"
                style="@style/Tospay.Button.Transparent.Border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:onClick="@{(view)->phoneViewModel.onClick(view)}"
                android:text="@string/resend"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
