<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="forgotPasswordViewModel"
            type="net.tospay.auth.ui.auth.forgot.ForgotPasswordViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.auth.forgot.ForgotPasswordFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_space_24"
                android:layout_marginTop="@dimen/default_space_16"
                android:layout_marginEnd="@dimen/default_space_24"
                android:fontFamily="@font/proxima_nova_semibold"
                android:text="@string/forgot_password"
                android:textColor="#0e5faa"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_space_24"
                android:layout_marginTop="@dimen/default_space_10"
                android:layout_marginEnd="@dimen/default_space_24"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/forgot_password_instructions"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <net.tospay.auth.view.ErrorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space_10"
                android:visibility="@{forgotPasswordViewModel.isError ? View.VISIBLE : View.GONE}"
                app:error_message="@{forgotPasswordViewModel.errorMessage}" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_space_24"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="@dimen/default_space_24"
                android:layout_marginEnd="@dimen/default_space_24"
                android:layout_marginRight="28dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/default_space_8"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:nextFocusRight="@id/passwordEditText"
                    android:nextFocusDown="@id/passwordEditText"
                    android:text="@={forgotPasswordViewModel.email}"
                    android:textColor="#4F5F8E"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorHint="#979797"
                    android:textSize="16sp"
                    tools:targetApi="o" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btn_back_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_space_24"
                android:layout_marginTop="@dimen/default_space_24"
                android:layout_marginEnd="@dimen/default_space_24"
                android:drawableLeft="@drawable/ic_arrow_back_white_24dp"
                android:drawablePadding="@dimen/default_space_8"
                android:drawableTint="#0ea9ca"
                android:fontFamily="@font/proxima_nova_regular"
                android:onClick="@{(view)->forgotPasswordViewModel.onClick(view)}"
                android:text="@string/back_to_login"
                android:textAllCaps="false"
                android:textColor="#0ea9ca"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_forgot_password"
                style="@style/Tospay.Button.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_space_24"
                android:layout_marginLeft="@dimen/default_space_24"
                android:layout_marginTop="@dimen/default_space_24"
                android:layout_marginEnd="@dimen/default_space_24"
                android:layout_marginRight="@dimen/default_space_24"
                android:layout_marginBottom="@dimen/default_space_24"
                android:onClick="@{(view)->forgotPasswordViewModel.onClick(view)}"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>